--- a/index.html
+++ b/index.html
@@ -5,8 +5,30 @@
 <!--
 function calculate(){
 var a=Number(calc.num1.value);
-var b=Number(calc.num2.value);
-calc.rez.value=a+b;
+    var b = Number(calc.num2.value);
+    var data = document.getElementById("op");
+    var t1 = data.options[data.selectedIndex].value;
+if ((calc.num1=="") || (calc.num2=="") )
+{
+alert("uncerrect values");
+return;
+ }
+    //alert(t1);
+switch (t1) {
+    case "sum":
+        calc.rez.value = a + b;
+            break;
+    case "sub":
+        calc.rez.value = a - b;
+            break;
+    case "mul":
+        calc.rez.value = a * b;
+          break;
+    case "divide":
+        calc.rez.value = a / b;
+          break;
+    }
+    
 //alert(a+b);
 }
 //-->
@@ -14,11 +36,17 @@ calc.rez.value=a+b;
 <body>
 <form name="calc">
 <div id="expression">
-<input type="text" name="num1" size=2> + <input type="text" name="num2" size=2> = <input type="text" name="rez" size=4>
+<input type="text" name="num1" size=2> + <input type="text" name="num2" size=2> = <input type="text" readonly id="rez" size="4">
 </div>
 <br>
+<select name="operations" id="op">
+<option value="sum">Сложить</option>
+<option value="sub">Вычесть</option>
+<option value="mul">Умножить</option>
+<option value="divide">разделить</option>
+</select>
 <input type="button" value="Get rezult" onclick="calculate()">    <input type="reset" value="Clear">
-</form>
+</form><div id="selected"></div>
 <br>
 <p>Калькулятор V 1.0. Вычисление суммы двух чисел.</p>
 </body>
