--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <html>
 <head>
-<title>Calculator Application</title></head>
+<title>Calculator Application</title>
+
+
+<link href="styles/style.css" type="text/css" rel="stylesheet">
+
+</head>
 <script lang="javascript">
 <!--
 function calculate(){
@@ -12,14 +17,16 @@ calc.rez.value=a+b;
 //-->
 </script>
 <body>
+<h1>Калькулятор V 1.0. Вычисление суммы двух чисел.</h1><br>
 <form name="calc">
 <div id="expression">
 <input type="text" name="num1" size=2> + <input type="text" name="num2" size=2> = <input type="text" name="rez" size=4>
 </div>
 <br>
-<input type="button" value="Get rezult" onclick="calculate()">    <input type="reset" value="Clear">
+<input type="button" class="ddd" value="Get rezult" onclick="calculate()">    <input type="reset" class="ddd" value="Clear">
 </form>
 <br>
-<p>Калькулятор V 1.0. Вычисление суммы двух чисел.</p>
+
 </body>
+
 </html>
